# fulcrum

./: .gitignore  Cargo.toml  PLAN.md  README.md  basis.yaml
.claude/: settings.local.json
crates/fulcrum-controller/: Cargo.toml
crates/fulcrum-controller/src/: lib.rs
crates/fulcrum-dictionary/: Cargo.toml
crates/fulcrum-dictionary/src/: lib.rs  load.rs  power.rs
crates/fulcrum-hands/: Cargo.toml
crates/fulcrum-hands/src/: lib.rs  twin.rs
crates/fulcrum-laboratory/: Cargo.toml
crates/fulcrum-laboratory/src/: alphabet.rs  gauge.rs  gauge_eval.rs  lib.rs  move_kind.rs  power_eval.rs  safe.rs
crates/fulcrum-planners/: Cargo.toml
crates/fulcrum-planners/src/: best_fit_decreasing.rs  least_loaded.rs  max_min_fair.rs  power_of_two.rs
crates/fulcrum-proto/: Cargo.toml
crates/fulcrum-proto/src/: lib.rs
examples/: bench_defensive.rs  bench_distributed.rs  bench_rebalance_ratio.rs  bench_typed_pure.rs  borg_replay.rs  cluster_twin.rs  rebalance_compare.rs  rebalance_stalls.rs  residue_impact.rs  residue_sweep.rs  synthetic.rs
plans/: load-balancing.md
src/: cluster.rs  gauge.rs  gauge_eval.rs  lib.rs  load.rs  move_kind.rs  planner.rs  power_eval.rs  replay.rs  safe.rs  trace.rs  twin.rs
src/planner/: best_fit_decreasing.rs  least_loaded.rs  max_min_fair.rs  power_of_two.rs
tests/: alphabet.rs  cluster_twin.rs  composition.rs  heterogeneous.rs  multi_dim.rs  planners.rs  rebalance_compare.rs  rebalance_ratio.rs  rebalance_stalls.rs  replay.rs  residue_impact.rs  residue_sweep.rs  seeded_bugs.rs  totality.rs  ui.rs
tests/data/: tiny_trace.csv
tests/ui/: forged_neutral.rs  forged_neutral.stderr  forged_witness.rs  forged_witness.stderr  swapped_capacity_mass.rs  swapped_capacity_mass.stderr
