[package]
name = "fulcrum-planners"
version = "0.0.1"
edition = "2021"
description = "Fulcrum planners: reference scheduler implementations over the move alphabet."
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "fulcrum_planners"
path = "src/lib.rs"

[dependencies]
fulcrum-dictionary = { path = "../fulcrum-dictionary" }
fulcrum-laboratory = { path = "../fulcrum-laboratory" }
